# tourhub

./: .gitignore  CLAUDE.md  README.md  backend_files.txt  docker-compose.release.yml  docker-compose.yml  frontend-tree.txt  frontend_files.txt  project_tree.txt  recent_commits.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d101bb77375_initial_nutrition_schema.py  74d17f270bc5_add_meal_plan_domain.py  8f3a1d2c4e5b_add_purchase_checklist.py  9c0001_create_projects_table.py  a10001_add_project_id_to_meal_plans.py  a15001_create_purchase_lists_table.py  a20001_add_project_id_to_purchase_lists.py  a30001_add_project_id_to_purchase_checklists.py  a40001_add_last_meal_to_projects.py  b10001_add_project_preparation_fields.py  c10001_add_recipe_components.py  d10001_merge_heads.py  e10001_add_meal_slots.py  e10001_add_recipe_notes_table.py  f10001_add_recipe_notes_table.py  g10001_add_recipe_archive_flag.py  h10001_add_dish_meal_roles.py  h10002_add_manual_meal_slot_marker.py  h10003_persist_meal_plan_warnings.py  h10004_add_purchase_list_responsible_person.py  h10005_add_equipment_requirements_and_lists.py  h10006_add_equipment_list_overrides.py  h10007_add_club_settings.py  h10008_expand_club_settings.py  h10009_add_appearance_settings.py  h10010_add_document_appearance_settings.py  h10011_add_module_settings.py  h10012_add_invitation_settings.py  h10013_add_mail_settings.py  h10014_add_access_bootstrap.py  (+9 more)
backend/app/: __init__.py  main.py
backend/scripts/: docker-entrypoint.sh
backend/tests/: conftest.py
(+853 files in other folders)
